<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="hint_nome">Escolha</string>
    <string name="informe_o_nome_do_cliente">Informe o nome do cliente</string>
    <string name="atum">Atum</string>
    <string name="bacon">Bacon</string>
    <string name="mussarela">Mussarela</string>
    <string name="calabresa">Calabresa</string>
    <string name="qual_o_tamanho_da_pizza">Qual o tamanho da pizza?</string>
    <string name="pequena">Pequena</string>
    <string name="media">Media</string>
    <string name="grande">Grande</string>
    <string name="pagamernto">Qual a forma de pagamento</string>

    <string name="credito">Credito</string>
    <string name="debito">Debito</string>
    <string name="vr">Vale Refeição</string>
    <string name="cupom">Cupom</string>
    <string name="btn_calcular">Calcular</string>

    <string name="saldacao">Ola %1$s, vamos ligar para o numero %2$s</string>
</resources>
