<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".UI.Main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".UI.Main.MainActivity">


        <TextView
            style="@style/label_titulo"
            android:text="dados do cliente" />

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            tools:text="Fulano da Silva" />

        <TextView
            style="@style/label_titulo"
            android:text="@string/hint_nome" />

        <LinearLayout style="@style/parent_horizontal">

            <CheckBox
                style="@style/pizza_checkbox"
                android:text="@string/atum" />

            <CheckBox
                style="@style/pizza_checkbox"
                android:text="@string/bacon" />
        </LinearLayout>

        <LinearLayout style="@style/parent_horizontal">

            <CheckBox
                style="@style/pizza_checkbox"
                android:text="@string/mussarela" />

            <CheckBox
                style="@style/pizza_checkbox"
                android:text="@string/calabresa" />
        </LinearLayout>

        <TextView
            style="@style/label_titulo"
            android:text="@string/qual_o_tamanho_da_pizza" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pequena" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grande" />

        </RadioGroup>

        <TextView
            style="@style/label_titulo"
            android:text="@string/pagamernto" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formas_pagamento" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao_personalizado"
            android:text="@string/btn_calcular"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>